Fix ruby gem install options for current ruby gem version

--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -31,7 +31,7 @@ RUN apk add --no-cache \
       alpine-sdk \
       netcat-openbsd \
       bash && \
-      gem install --no-rdoc --no-ri openssl && \
+      gem install --no-document openssl && \
       update-ca-certificates && \
       wget -O /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v"$DUMB_INIT_VERSION"/dumb-init_"$DUMB_INIT_VERSION"_amd64 && \
       wget -O /usr/local/bin/confd https://github.com/kelseyhightower/confd/releases/download/v"$CONFD_VERSION"/confd-"$CONFD_VERSION"-linux-amd64 && \
