--- a/puppetserver/config/auth.conf
+++ b/puppetserver/config/auth.conf
@@ -11,7 +11,7 @@ authorization: {
             }
             allow: "$1"
             sort-order: 500
-            name: "puppetlabs catalog"
+            name: "puppetlabs v3 catalog from agents"
         },
         {
             # Allow nodes to retrieve the certificate they requested earlier
@@ -53,9 +53,27 @@ authorization: {
                 type: path
                 method: [get, put, delete]
             }
-            allow: "ca-master"
+            allow: {
+               extensions: {
+                   pp_cli_auth: "true"
+               }
+            }
             sort-order: 500
             name: "puppetlabs cert status"
+        },
+        {
+            match-request: {
+                path: "^/puppet-ca/v1/certificate_revocation_list$"
+                type: regex
+                method: put
+            }
+            allow: {
+               extensions: {
+                   pp_cli_auth: "true"
+               }
+            }
+            sort-order: 500
+            name: "puppetlabs CRL update"
         },
         {
             # Allow the CA CLI to access the certificate_statuses endpoint
@@ -64,9 +82,39 @@ authorization: {
                 type: path
                 method: get
             }
-            allow: "ca-master"
+            allow: {
+               extensions: {
+                   pp_cli_auth: "true"
+               }
+            }
             sort-order: 500
             name: "puppetlabs cert statuses"
+        },
+        {
+            # Allow authenticated access to the CA expirations endpoint
+            match-request: {
+                path: "/puppet-ca/v1/expirations"
+                type: path
+                method: get
+            }
+            allow: "*"
+            sort-order: 500
+            name: "puppetlabs CA cert and CRL expirations"
+        },
+        {
+            # Allow the CA CLI to access the certificate clean endpoint
+            match-request: {
+                path: "/puppet-ca/v1/clean"
+                type: path
+                method: put
+            }
+            allow: {
+               extensions: {
+                   pp_cli_auth: "true"
+               }
+            }
+            sort-order: 500
+            name: "puppetlabs cert clean"
         },
         {
             # Allow unauthenticated access to the status service endpoint
